--- a/NetworkTraffic.ipynb
+++ b/NetworkTraffic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NetworkTraffic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjOVSjcH2CIDv9dWCLCE1J",
+      "authorship_tag": "ABX9TyM+ZxMvWno1vi+2laEqudYg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
       },
       "source": [
         "# train_images[0]/255\n",
-        "len(train_images)"
+        "# len(train_images)"
       ],
       "execution_count": null,
       "outputs": [
